--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       svg { display: block; }
       polygon { fill: #41b883; stroke: #354955; }
-      circle { fill: transparent; stroke: #35495e; }
+      circle  { fill: transparent; stroke: #35495e; }
       input[type="range"] { display: block;
                             width: 100%;
                             margin-bottom: 15px;
@@ -29,6 +29,6 @@
       <input type="range" min="10" max="2000" v-model.number="updateInterval" />
     </div>
 
-    <script src="/index.js"></script>
+    <script src="/index.js">export namespace Vue; </script>
   </body>
 </html>
