--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
       <input type="range" min="10" max="2000" v-model.number="updateInterval" />
     </div>
 
-    <script src="/index.js">export namespace Vue; </script>
+    <script src="/index.js">//export namespace Vue; </script>
   </body>
 </html>
