--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,11 @@
       <input type="range" min="0" max="400" v-model.number="minRadius" />
       <label>Скорость: {{ updateInterval }} миллисекунд</label>
       <input type="range" min="10" max="2000" v-model.number="updateInterval" />
-    </div><!-- <script>  alert( 'Привет, мир!' );</script> 
-    <script src="poly.js"></script>-->
+    </div>
+    <script src="public/index.js"></script>
+    <!-- <script>  alert( 'Привет, мир!' );</script> 
+
+    
 <script>
     
 new Vue({ el: "#app", 
@@ -116,7 +119,7 @@ function generatePoints(stats) {
           .join(" "); //.$mount("#app");
       } // alert( 'Привет, мир!' );
 
-</script>
+</script>-->
     <p>Продолжение</p>
   </body>
 </html>
