--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <label>Скорость: {{ updateInterval }} миллисекунд</label>
       <input type="range" min="10" max="2000" v-model.number="updateInterval" />
     </div>
-    <script src="public/index.js"></script>
+    <script src="/index.js"></script>
     <!-- <script>  alert( 'Привет, мир!' );</script> 
 
     
