--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <input type="range" min="3" max="500" v-model.number="sides" />
       <label>Радиус: {{ minRadius }}%</label>
       <input type="range" min="0" max="400" v-model.number="minRadius" />
-      <label>Скорость: {{ updateInterval }} миллисекунд</label>
+      <label>Скорость: {{ updateInterval }} ms</label>
       <input type="range" min="10" max="2000" v-model.number="updateInterval" />
     </div>
 
