--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       circle { fill: transparent; stroke: #35495e; }
       input[type="range"] { display: block;
                             width: 100%;
-                            margin-bottom: 15px;
+                            margin-bottom: 5px;
                           }
     </style>
   </head>
@@ -30,6 +30,6 @@
     </div>
 
     <script src="/index.js"></script>
-    <p>я в корне</p>
+    <pre>я в корне</pre>
   </body>
 </html>
