--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <input type="range" min="10" max="2000" v-model.number="updateInterval" />
     </div>
 
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
     <pre>я в корне</pre>
   </body>
 </html>
